--- a/frontend/javagames/memorygame/index.html
+++ b/frontend/javagames/memorygame/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Memory</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' href='style.css'>
-    <script src='app.js'></script>
+    <link rel='stylesheet' type='text/css' href='dist/javagames/memorygame/style.css'>
+    <script src='dist/javagames/memorygame/app.js'></script>
 </head>
 <body>
     <h3>Score: <span id="result"></span></h3>
