--- a/frontend/javagames/memorygame/index.html
+++ b/frontend/javagames/memorygame/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Memory</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' src='public/style.css'>
+    <link rel='stylesheet' type='text/css' href='public/style.css'>
     <script src='public/app.js'></script>
 </head>
 <body>
