--- a/skolarbete/EShopJsf/src/main/webapp/index.xhtml
+++ b/skolarbete/EShopJsf/src/main/webapp/index.xhtml
@@ -1,35 +1,41 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:h="http://java.sun.com/jsf/html">
+    xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:ui="http://java.sun.com/jsf/facelets">
     
     <head >
     	<title>EShop</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous"/>
     </head>
-    <body>
-    	<h:dataTable value="#{productBean.getAll()}" var="p">
-    		<h:column>
-    			<f:facet name="header">Produktnamn:</f:facet>
-    			<h:outputLabel value="#{p.name}"></h:outputLabel>
-    		</h:column>
-    		<h:column>
-    			<f:facet name="header">Pris</f:facet>
-    			<h:outputLabel value="#{p.price} kr"></h:outputLabel>
-    		</h:column>
-    		<h:column>
-    			<f:facet name="header">I lager</f:facet>
-    			<h:outputLabel value="#{p.stock} st"></h:outputLabel>
-    		</h:column>
-    		<h:column>
-    			<f:facet name="header">Lägg till</f:facet>
-    			<h:form>
-    				<h:commandButton value="+" action="#{cartBean.addToCart(p)}">
-    				</h:commandButton>
-    			</h:form>
-    		</h:column>
-    	</h:dataTable>
-    	<form>
-     	 <h:button value="Cart" outcome="cart"/>
-     	 <h:button value="Order" outcome="Order"/>
-      </form>
+    <body style="background-color: powderblue;">
+    	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+    	<h:button style="float:right; margin: 10px;" class="btn btn-success" value="Cart #{cartBean.numberOfItems()}" outcome="cart"/>
+    	<div style="margin: 10px;">
+	    	<h:dataTable value="#{productBean.getAll()}" var="p">
+	    		<h:column>
+	    			<f:facet name="header">Produktnamn:</f:facet>
+	    			<h:outputLabel value="#{p.name}"></h:outputLabel>
+	    		</h:column>
+	    		<h:column>
+	    			<f:facet name="header">Pris</f:facet>
+	    			<h:outputLabel value="#{p.price} kr"></h:outputLabel>
+	    		</h:column>
+	    		<h:column>
+	    			<f:facet name="header">I lager</f:facet>
+	    			<h:outputLabel value="#{p.stock} st"></h:outputLabel>
+	    		</h:column>
+	    		<h:column>
+	    			<f:facet name="header">Lägg till</f:facet>
+	    			<h:form>
+	    				<h:commandButton style="border-radius:20px" class="btn btn-success" value="+" action="#{cartBean.addToCart(p)}">
+	    				</h:commandButton>
+	    			</h:form>
+	    		</h:column>
+	    	</h:dataTable>
+	    	<form>
+	     	 
+	     	 <h:button class="btn btn-success" value="Order" outcome="Order"/>
+	      </form>
+      </div>
     </body>
 </html>
