--- a/skolarbete/EShopJsf/src/main/webapp/cart.xhtml
+++ b/skolarbete/EShopJsf/src/main/webapp/cart.xhtml
@@ -1,49 +1,56 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:h="http://java.sun.com/jsf/html">
+    xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:ui="http://java.sun.com/jsf/facelets">
     
     <head >
     	<title>Cart</title>
+    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous"/>
     </head>
-    <body>
+    <body style="background-color: powderblue;">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+    <div style="margin: 10px;">	  
     	  <h:dataTable value="#{cartBean.getProductInCartList()}" var="p">
-    		<h:column>
-    			<f:facet name="header">Produktnamn:</f:facet>
-    			<h:outputLabel value="#{p.getProduct().name}"></h:outputLabel>
-    		</h:column>
-    		<h:column>
-    			<f:facet name="header">Pris</f:facet>
-    			<h:outputLabel value="#{p.getProduct().price} kr"></h:outputLabel>
-    		</h:column>
-    		<h:column>
-    			<f:facet name="header">Antal i varukorgen</f:facet>
-    			<h:outputLabel value="#{p.getAmount()} st"></h:outputLabel>
-    		</h:column>
-    		<h:column>
-    			<f:facet name="header">Summa</f:facet>
-    			<h:outputLabel value="#{p.totalAmount()} kr"></h:outputLabel>
-    		</h:column>
-    		<h:column>
-    			<f:facet name="header">Ta bort</f:facet>
-    			<h:form>
-    				<h:commandButton value="-" action="#{cartBean.removeFromCart(p.getProduct())}">
-    				</h:commandButton>
-    			</h:form>
-    		</h:column>
-    		<h:column>
-    			<f:facet name="header">Lägg till</f:facet>
-    			<h:form>
-    				<h:commandButton value="+" action="#{cartBean.addToCart(p.getProduct())}">
-    				</h:commandButton>
-    			</h:form>
-    		</h:column>
+	    	  <div class="">
+	    		<h:column>
+	    			<f:facet name="header">Produktnamn:</f:facet>
+	    			<h:outputLabel value="#{p.getProduct().name}"></h:outputLabel>
+	    		</h:column>
+	    		<h:column>
+	    			<f:facet name="header">Pris</f:facet>
+	    			<h:outputLabel value="#{p.getProduct().price} kr"></h:outputLabel>
+	    		</h:column>
+	    		<h:column>
+	    			<f:facet name="header">Antal i varukorgen</f:facet>
+	    			<h:outputLabel value="#{p.getAmount()} st"></h:outputLabel>
+	    		</h:column>
+	    		<h:column>
+	    			<f:facet name="header">Summa</f:facet>
+	    			<h:outputLabel value="#{p.totalAmount()} kr"></h:outputLabel>
+	    		</h:column>
+	    		<h:column>
+	    			<f:facet name="header">Ta bort</f:facet>
+	    			<h:form>
+	    				<h:commandButton style="border-radius:20px" class="btn btn-danger" value="-" action="#{cartBean.removeFromCart(p.getProduct())}">
+	    				</h:commandButton>
+	    			</h:form>
+	    		</h:column>
+	    		<h:column>
+	    			<f:facet name="header">Lägg till</f:facet>
+	    			<h:form>
+	    				<h:commandButton style="border-radius:20px" class="btn btn-success" value="+" action="#{cartBean.addToCart(p.getProduct())}">
+	    				</h:commandButton>
+	    			</h:form>
+	    		</h:column>
+    		</div>
     	</h:dataTable>  
     	<br></br>
     	<h:outputLabel>Totalsumma</h:outputLabel>
-    	<h:outputText value="#{cartBean.cartsTotalAmount()} kr"></h:outputText>
+    	<h:outputText value="#{cartBean.cartsTotalPrice()} kr"></h:outputText>
     	    	<form>
-     	 <h:button value="Home" outcome="index"/>
+     	 <h:button class="btn btn-success" value="Home" outcome="index"/>
       </form>
-    	
-        </body>
+    </div>
+	</body>
+	
 </html>
