lot of work in JavaEE EShop. Added some cart support and view for all orders

--- a/skolarbete/EShopJsf/src/main/webapp/index.xhtml
+++ b/skolarbete/EShopJsf/src/main/webapp/index.xhtml
@@ -34,7 +34,8 @@
 	    	</h:dataTable>
 	    	<form>
 	     	 
-	     	 <h:button class="btn btn-success" value="Order" outcome="Order"/>
+	     	 <h:button style="margin:5px" class="btn btn-success" value="Order" outcome="Order"/>
+	     	 <h:button class="btn btn-success" value="All orders" outcome="completedOrders"/>
 	      </form>
       </div>
     </body>
